examples/test/testpolicy17168.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17168
  namespace: namespace315
spec:
  podSelector:
    matchLabels:
      key38: value2
      key39: value8
      key41: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value10
      podSelector:
        matchLabels:
          key6: value11
          key1: value25
